--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,30 +1,19 @@
-pipeline {
-    agent {
-        docker {
-            image 'maven:3.9.2'
-            args '-u root'
-        }
-    }
-    stages {
+node {
+    docker.image('maven:3.9.2').inside('-u root') {
         stage('Build') {
-            steps {
-                sh 'mvn -B -DskipTests clean package'
-            }
+            sh 'mvn -B -DskipTests clean package'
         }
+        
         stage('Test') {
-            steps {
+            try {
                 sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
+            } finally {
+                junit 'target/surefire-reports/*.xml'
             }
         }
+        
         stage('Deliver') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
-            }
+            sh './jenkins/scripts/deliver.sh'
         }
     }
 }
