--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,12 +1,11 @@
 pipeline {
     agent {
         docker {
-            image 'maven:3.9.9-ibm-semeru-23-jammy'
-            args '-u root'
+            image 'maven:3.9.0'
+            args '-v /root/.m2:/root/.m2'
         }
     }
     stages {
-        
         stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
@@ -14,45 +13,17 @@ pipeline {
         }
         stage('Test') {
             steps {
-                script {
-                    try {
-                        sh 'mvn test'
-                    } finally {
-                        junit 'target/surefire-reports/*.xml'
-                    }
+                sh 'mvn test'
+            }
+            post {
+                always {
+                    junit 'target/surefire-reports/*.xml'
                 }
             }
         }
-
-        stage('Manual Approval') {
-            steps {
-                input message: 'Lanjutkan ke tahap Deploy?', ok: 'Proceed'
-            }
-        }
-
-        stage('Deploy') {
+        stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
-                sleep 1
-
-                // Archive the artifacts
-                script {
-                    def jarFile = sh(script: 'find target/ -name "*.jar"', returnStdout: true).trim()
-                    archiveArtifacts artifacts: jarFile, fingerprint: true
-                    
-                    sshagent(credentials: ['1d660cae-20a2-41e2-b380-ee6962a8c6c3']) {
-                        // Copy JAR file to EC2
-                        sh """
-                            scp -o StrictHostKeyChecking=no ${jarFile} ubuntu@52.55.5.102:/home/ubuntu/target-java/
-                        """
-                        
-                        // Execute the JAR on EC2
-                        def jarName = jarFile.split('/')[-1]
-                        sh """
-                            ssh -o StrictHostKeyChecking=no ubuntu@52.55.5.102 'cd /home/ubuntu/target-java && nohup java -jar ${jarName} > app.log 2>&1 &'
-                        """
-                    }
-                }
             }
         }
     }
