--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,28 +2,77 @@ pipeline {
     agent {
         docker {
             image 'maven:3.9.0'
-            args '-v /root/.m2:/root/.m2 --group-add 0 -u root'  // Run as root to handle permissions
+            args '''
+                -v /root/.m2:/root/.m2 \
+                --group-add 0 \
+                -u root \
+                --network host \
+                --dns 8.8.8.8 \
+                --dns 8.8.4.4
+            '''
         }
     }
     
     stages {
         stage('Prepare Workspace') {
             steps {
-                // Ensure proper permissions on workspace
                 sh 'chmod -R 777 .'
+                
+                // Verify network connectivity
+                sh '''
+                    echo "Testing network connectivity..."
+                    ping -c 1 repo.maven.apache.org || echo "Ping failed but continuing..."
+                    
+                    echo "Checking DNS resolution..."
+                    nslookup repo.maven.apache.org || echo "DNS lookup failed but continuing..."
+                    
+                    echo "Current DNS settings:"
+                    cat /etc/resolv.conf
+                '''
+            }
+        }
+        
+        stage('Update Maven Settings') {
+            steps {
+                script {
+                    // Create custom settings.xml with mirrors
+                    writeFile file: 'settings.xml', text: '''
+                        <settings>
+                            <mirrors>
+                                <mirror>
+                                    <id>central-https</id>
+                                    <url>https://repo1.maven.org/maven2</url>
+                                    <mirrorOf>central</mirrorOf>
+                                </mirror>
+                            </mirrors>
+                        </settings>
+                    '''
+                }
+                
+                // Use the custom settings file
+                sh 'mkdir -p /root/.m2 && cp settings.xml /root/.m2/'
             }
         }
         
         stage('Build') {
             steps {
-                // Add -Dmaven.clean.failOnError=false to prevent clean failures
-                sh 'mvn -B -Dmaven.clean.failOnError=false -DskipTests clean package'
+                // Add retry mechanism for network issues
+                retry(3) {
+                    sh '''
+                        mvn -B \
+                        -Dmaven.clean.failOnError=false \
+                        -DskipTests \
+                        clean package \
+                        --settings settings.xml \
+                        -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+                    '''
+                }
             }
         }
         
         stage('Test') {
             steps {
-                sh 'mvn test'
+                sh 'mvn test --settings settings.xml'
             }
             post {
                 always {
@@ -44,7 +93,6 @@ pipeline {
                 sleep 1
                 
                 script {
-                    // Use try-catch to handle potential file finding issues
                     try {
                         def jarFile = sh(script: 'find target/ -name "*.jar"', returnStdout: true).trim()
                         
@@ -52,23 +100,15 @@ pipeline {
                             archiveArtifacts artifacts: jarFile, fingerprint: true
                             
                             sshagent(credentials: ['1d660cae-20a2-41e2-b380-ee6962a8c6c3']) {
-                                // Ensure target directory exists on EC2
-                                sh """
-                                    ssh -o StrictHostKeyChecking=no ubuntu@52.55.5.102 'mkdir -p /home/ubuntu/target-java'
-                                """
-                                
-                                // Copy JAR file to EC2
                                 sh """
                                     scp -o StrictHostKeyChecking=no ${jarFile} ubuntu@52.55.5.102:/home/ubuntu/target-java/
                                 """
                                 
-                                // Kill existing Java process if running
+                                def jarName = jarFile.split('/')[-1]
                                 sh """
-                                    ssh -o StrictHostKeyChecking=no ubuntu@52.55.5.102 'pkill -f ${jarFile.split('/')[-1]} || true'
+                                    ssh -o StrictHostKeyChecking=no ubuntu@52.55.5.102 'pkill -f ${jarName} || true'
                                 """
                                 
-                                // Execute the JAR on EC2 with proper logging
-                                def jarName = jarFile.split('/')[-1]
                                 sh """
                                     ssh -o StrictHostKeyChecking=no ubuntu@52.55.5.102 '
                                         cd /home/ubuntu/target-java && 
@@ -89,7 +129,7 @@ pipeline {
     
     post {
         always {
-            cleanWs()  // Clean workspace after build
+            cleanWs()
         }
     }
 }
