--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
         <version>3.5.0</version>
-        <!-- <executions>
+        <executions>
           <execution>
             <id>enforce-maven</id>
             <goals>
@@ -68,7 +68,7 @@
               </rules>
             </configuration>
           </execution>
-        </executions> -->
+        </executions>
       </plugin>
     </plugins>
   </build>
