--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,13 +2,12 @@ pipeline {
     agent {
         docker {
             image 'maven:3.9.0'
-            args '-u root'
+            args '-v /root/.m2:/root/.m2'
         }
     }
     stages {
         stage('Build') {
             steps {
-                sh 'mvn clean install'
                 sh 'mvn -B -DskipTests clean package'
             }
         }
