--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         docker {
             image 'maven:3.9.0'
-            args '-v /root/.m2:/root/.m2'
+            args '-u root'
         }
     }
     stages {
