--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,6 +5,11 @@ pipeline {
             args '-u root'
         }
     }
+
+    environment {
+        CI = 'true'
+    }
+
     stages {
         stage('Build') {
             steps {
@@ -37,7 +42,7 @@ pipeline {
                     sh 'scp -o StrictHostKeyChecking=no -r target/my-app-*.jar ubuntu@52.55.5.102:/home/ubuntu/target-java/'
                     
                     // Execute the JAR on EC2
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@52.55.5.102 "cd /home/ubuntu/target-java && nohup java -jar my-app-*.jar > app.log 2>&1 &"'
+                    sh 'ssh  -tt -o StrictHostKeyChecking=no ubuntu@52.55.5.102 "cd /home/ubuntu/target-java && nohup java -jar my-app-*.jar > app.log 2>&1 &"'
                 }
             }
         }
