--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -42,11 +42,11 @@ pipeline {
                     sh 'scp -o StrictHostKeyChecking=no -r target/my-app-*.jar ubuntu@52.55.5.102:/home/ubuntu/target-java'
                     
                     // join to ec2
-                    sh '''ssh -tt -o StrictHostKeyChecking=no ubuntu@52.55.5.102 << EOF
-                    cd /home/ubuntu/target-java
-                    nohup java -jar my-app-*.jar > app.log 2>&1 &
-                    exit
-                    EOF'''
+                    // sh '''ssh -tt -o StrictHostKeyChecking=no ubuntu@52.55.5.102 << EOF
+                    // cd /home/ubuntu/target-java
+                    // nohup java -jar my-app-*.jar > app.log 2>&1 &
+                    // exit
+                    // EOF'''
                 }
             }
         }
