--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
                 sleep 1
 
                 sshagent(credentials: ['1d660cae-20a2-41e2-b380-ee6962a8c6c3']) {
-                    join to ec2
+                    // join to ec2
                     sh '''ssh -tt -o StrictHostKeyChecking=no ubuntu@52.55.5.102 << EOF
                     whoami
                     exit
