--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,43 +1,41 @@
 pipeline {
-    // agent {
-    //     docker {
-    //         image 'maven:3.9.0'
-    //         args '-u root'
-    //     }
-    // }
-
-    agent any
+    agent {
+        docker {
+            image 'maven:3.9.0'
+            args '-u root'
+        }
+    }
 
     environment {
         CI = 'true'
     }
 
     stages {
-        // stage('Build') {
-        //     steps {
-        //         sh 'mvn -B -DskipTests clean package'
-        //     }
-        // }
-        // stage('Test') {
-        //     steps {
-        //         sh 'mvn test'
-        //     }
-        //     post {
-        //         always {
-        //             junit 'target/surefire-reports/*.xml'
-        //         }
-        //     }
-        // }
-        // stage('Manual Approval') {
-        //     steps {
-        //         input message: 'Lanjutkan ke tahap Deploy?', ok: 'Proceed'
-        //     }
-        // }
+        stage('Build') {
+            steps {
+                sh 'mvn -B -DskipTests clean package'
+            }
+        }
+        stage('Test') {
+            steps {
+                sh 'mvn test'
+            }
+            post {
+                always {
+                    junit 'target/surefire-reports/*.xml'
+                }
+            }
+        }
+        stage('Manual Approval') {
+            steps {
+                input message: 'Lanjutkan ke tahap Deploy?', ok: 'Proceed'
+            }
+        }
 
         stage('Deploy') {
             steps {
-                // sh './jenkins/scripts/deliver.sh'
-                // sleep 1
+                sh './jenkins/scripts/deliver.sh'
+                sleep 10
 
                 sshagent(credentials: ['1d660cae-20a2-41e2-b380-ee6962a8c6c3']) {
                     // join to ec2
