--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,27 +16,25 @@ pipeline {
                 sh 'mvn -B -DskipTests clean package'
             }
         }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
-        }
-        stage('Manual Approval') {
-            steps {
-                input message: 'Lanjutkan ke tahap Deploy?', ok: 'Proceed'
-            }
-        }
+        // stage('Test') {
+        //     steps {
+        //         sh 'mvn test'
+        //     }
+        //     post {
+        //         always {
+        //             junit 'target/surefire-reports/*.xml'
+        //         }
+        //     }
+        // }
+        // stage('Manual Approval') {
+        //     steps {
+        //         input message: 'Lanjutkan ke tahap Deploy?', ok: 'Proceed'
+        //         sh './jenkins/scripts/deliver.sh'
+        //     }
+        // }
 
         stage('Deploy') {
             steps {
-                sh './jenkins/scripts/deliver.sh'
-                sleep 10
-
                 sshagent(credentials: ['1d660cae-20a2-41e2-b380-ee6962a8c6c3']) {
                     // join to ec2
                     sh '''ssh -tt -o StrictHostKeyChecking=no ubuntu@52.55.5.102 << EOF
