--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         docker {
             image 'maven:3.9.0'
-            args '-u root'
+            args '-u root --entrypoint=""'
         }
     }
 
@@ -13,7 +13,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                sh 'apt-get update && apt-get install -y openssh-client && mvn -B -DskipTests clean package'
             }
         }
         // stage('Test') {
