--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,54 +16,38 @@ pipeline {
                 sh 'apt-get update && apt-get install -y openssh-client && mvn -B -DskipTests clean package'
             }
         }
-        // stage('Test') {
-        //     steps {
-        //         sh 'mvn test'
-        //     }
-        //     post {
-        //         always {
-        //             junit 'target/surefire-reports/*.xml'
-        //         }
-        //     }
-        // }
-        // stage('Manual Approval') {
-        //     steps {
-        //         input message: 'Lanjutkan ke tahap Deploy?', ok: 'Proceed'
-        //         sh './jenkins/scripts/deliver.sh'
-        //     }
-        // }
-
-        stage('Deploy') {
+        stage('Test') {
             steps {
-                sshagent(credentials: ['1d660cae-20a2-41e2-b380-ee6962a8c6c3']) {
-                    // join to ec2
-                    sh '''ssh -tt -o StrictHostKeyChecking=no ubuntu@52.55.5.102 << EOF
-                    whoami
-                    exit
-                    EOF'''
-                    // sh 'scp -o StrictHostKeyChecking=no -r ./build/* ubuntu@52.55.5.102:/var/www/html/react-fe'
+                sh 'mvn test'
+            }
+            post {
+                always {
+                    junit 'target/surefire-reports/*.xml'
                 }
             }
         }
+        stage('Manual Approval') {
+            steps {
+                input message: 'Lanjutkan ke tahap Deploy?', ok: 'Proceed'
+                sh './jenkins/scripts/deliver.sh'
+            }
+        }
 
-        // stage('Deploy') {
-        //     steps {
-        //         sh './jenkins/scripts/deliver.sh'
-        //         sleep 1
+        stage('Deploy') {
+            steps {
 
-        //         sshagent(credentials: ['1d660cae-20a2-41e2-b380-ee6962a8c6c3']) {
-        //             // Copy JAR file to EC2
-        //             sh 'ls -l target'
-        //             // sh 'scp -o StrictHostKeyChecking=no -r target/my-app-*.jar ubuntu@52.55.5.102:/home/ubuntu/target-java'
+                sshagent(credentials: ['1d660cae-20a2-41e2-b380-ee6962a8c6c3']) {
+                    // Copy JAR file to EC2
+                    sh 'scp -o StrictHostKeyChecking=no -r target/my-app-*.jar ubuntu@52.55.5.102:/home/ubuntu/target-java'
                     
-        //             // join to ec2
-        //             // sh '''ssh -tt -o StrictHostKeyChecking=no ubuntu@52.55.5.102 << EOF
-        //             // cd /home/ubuntu/target-java
-        //             // nohup java -jar my-app-*.jar > app.log 2>&1 &
-        //             // exit
-        //             // EOF'''
-        //         }
-        //     }
-        // }
+                    // join to ec2
+                    sh '''ssh -tt -o StrictHostKeyChecking=no ubuntu@52.55.5.102 << EOF
+                    cd /home/ubuntu/target-java
+                    nohup java -jar my-app-*.jar > app.log 2>&1 &
+                    exit
+                    EOF'''
+                }
+            }
+        }
     }
 }
